[package]
name = "linemd"
version = "0.1.1"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple and opinionated markdown parser (and renderer) written in Rust."
repository = "https://github.com/yusdacra/linemd"
keywords = ["markdown", "parser", "html"]
categories = ["parser-implementations", "command-line-utilities"]

[features]
default = ["html"]
# Enables HTML rendering code.
html = []
# Enables SVG rendering code.
svg = []

[package.metadata.nix]
build = true
app = true

[[bin]]
name = "linemd"
required-features = ["html", "svg"]